2019-05-22  Tomas Volf <wolf@wolfsden.cz>

	* configure.ac: remove unused conditionals, general clean up

2019-05-05  Tomas Volf <wolf@wolfsden.cz>

	* src/skels: gengen is now required to build from git
	* src/cmdline.ggo: gengetopt is now required to build from git

2012-07-18  Tim Marston  <tim@ed.am>

	* src/cmdline.ggo: added --strict-hidden option
	* src/gengetopt.cc: check for --strict-hidden when automatically
	adding full and detailed help options, and pass presence of
	--strict-hidden to CmdlineParserCreeator
	* src/gm.cc, src/gm.h: when strictly hiding options, don't
	generate the full help string array and override generate_hidden
	in generate_help_option_list(); also, don't add details to the
	detailed help string array for options that are going to be hidden
	* src/gm_utils.cpp, src/gm_utils.h: has_options_with_details() now
	needs to know if strict option hiding is in effect so that it can
	ignore options that have details but will be hidden
	* doc/gengetopt.texinfo: updated for --strict-hidden feature

2012-07-17  Tim Marston  <tim@ed.am>

	* src/gm.cc: fixed NULL pointer defreference; fixed option list
	ordering inconsistency (which could lead to truncation of
	displayed options)

2012-07-11  Tim Marston  <tim@ed.am>

	* src/gm_utils.cpp: fixed line wrapping so that it handles
	(removes) extra spaces at the end of the line

2012-07-10  Tim Marston  <tim@ed.am>

	* src/cmdline.ggo: removed unnecessary additional new-line

2012-07-10  Tim Marston  <tim@ed.am>

	* src/skels/c_source.h_skel: added args_info_versiontext variable
	* src/scanner.ll, src/scanner.yy: added versiontext directive
	* src/gengetopt.cc: added gengetopt_versiontext variable and
	setter function
	* src/gm.cc: added versiontext string generator function

2011-09-05  bettini  <bettini@bettini-N150>

	* src/my_map.h: removed
	* src/my_string.h: removed
	* src/my_sstream.h: removed

	* src/gm.cc (CmdlineParserCreator::generate_usage_string):