@@ -88,7 +88,7 @@ A pointer to that structure is passed to the function by the main
 program.
 
 I added inputs and inputs_num to the struct generated by gm.c
-which hold an array of strings and an integer to hold the unamed options
+which hold an array of strings and an integer to hold the unnamed options
 passed in the command line
 
 Maybe it is better to use string.h and standard string functions... maybe
@@ -111,7 +111,7 @@ generated :-)
 GNU Standards doesn't advice about long Usage help line, so I made
 an option to enable it (by default I disabled it).
 
-sample1 in doc directory is a C++ program that uses unamed options
+sample1 in doc directory is a C++ program that uses unnamed options
 
 I tested gengetopt on a SunSparc which doesn't have getopt and it works :-)
 
