@@ -1,0 +1,8 @@
+# no_unnamed_cmd.ggo
+
+# This test an input file processed without --unnamed-opt but with a string
+
+package "no_unnamed"
+version "1.0"
+
+option  "foo"        i "foo string option" string no
