@@ -15,7 +15,7 @@ srcdir=@srcdir@
 for source in $srcdir/*.err; do
   test_input="`echo $source|sed s/err/ggo/`";
   output="`echo $source|sed -e \"s/^.*\///g\"`";
-  $PROGNAME --unamed-opt -i $test_input --file-name null 2> $output.out || true ;
+  $PROGNAME --unnamed-opt -i $test_input --file-name null 2> $output.out || true ;
   sed -i -e "s/^.*\///g" $output.out ;
   echo "diff $output.out $source";
   if ! diff $output.out $source;
