@@ -1,3 +1,8 @@
+2019-05-30  Tomas Volf <wolf@wolfsden.cz>
+
+	* --unamed command line option renamed to --unnamed, old still
+	provided (but hidden) to provide backwards compatibility
+
 2019-05-22  Tomas Volf <wolf@wolfsden.cz>
 
 	* configure.ac: remove unused conditionals, general clean up
